--- a/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
+++ b/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
@@ -262,11 +262,12 @@
     justify-content: space-between;
     /* background-color: red; */
 }
-.candidateInfo p select{
-    width: 100%;
+
+.candidateInfo p select {
+    /* width: 100%; */
     height: 30px;
     padding: 2px;
-    
+
 }
 
 .candidateInfo p select {
@@ -371,7 +372,7 @@
     text-align: center;
     font-size: 14px;
     font-weight: 500;
-    color:#6b7280;
+    color: #6b7280;
 }
 
 .aadhaar1 {
@@ -754,7 +755,17 @@
 
 .addLanguages input {
     width: 100%;
-    height: 42px;
+    /* height: 42px; */
+    border: 1px solid var(--borderColor);
+    border-radius: 7px;
+    padding: 15px;
+    font-size: 15px;
+    outline: none;
+}
+
+.addLanguages select {
+    width: 100%;
+    /* height: 42px; */
     border: 1px solid var(--borderColor);
     border-radius: 7px;
     padding: 15px;
@@ -1089,6 +1100,16 @@
 }
 
 .Bottombtns .nextbtn1 {
+    width: 100%;
+    background-color: var(--primaryColor);
+    padding: 10px;
+    border-radius: 7px;
+    outline: none;
+    border: none;
+    color: white;
+}
+
+.nextbtn {
     width: 100%;
     background-color: var(--primaryColor);
     padding: 10px;
