--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,16 @@
   cursor: pointer;
   /* Add a pointer on hover */
 }
+
+#overlayTransparent {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: transparent;
+  z-index: 2;
+  cursor: pointer;
+}
