--- a/src/Components/Reusable/DashBoardReusable/DashSearch/DashSearch.css
+++ b/src/Components/Reusable/DashBoardReusable/DashSearch/DashSearch.css
@@ -68,7 +68,7 @@
 .hourlyRate {
     width: 450px;
     position: relative;
-    z-index: 5;
+    z-index: 5 !important;
     padding: 25px;
     padding-bottom: 20px;
     margin-top: 15px;
