--- a/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
+++ b/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
@@ -240,12 +240,12 @@
 
 .candidateInfo input {
     width: 100%;
-    height: 42px;
+    /* height: 42px; */
     border: 1px solid var(--borderColor);
     border-radius: 7px;
-    padding: 15px 10px;
+    padding: 9px;
     font-size: 15px;
-    outline: none;
+    /* outline: none; */
 
 }
 
@@ -654,29 +654,60 @@
     justify-content: flex-start;
 }
 
-.skillSet button {
-    padding: 5px 10px;
-    height: 30px;
+.skillSetBtnDisable {
+    padding: 0px 10px;
+    /* height: 30px; */
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #EDE9FE;
-    color: var(--loadingIconColor);
-    margin: 0px 30px;
+    background-color: var(--white);
+    color: var(--textColor);
+    margin-left: 30px;
+    margin-right: 0px;
     border-radius: 30px;
-    border: none;
-    outline: none;
+    border: 1px solid var(--borderColor);
+
 }
 
-.skillSet button[title] {
-    padding: 5px 10px;
-    height: 30px;
+.skillSetButtonDisable[title] {
+    padding: 0px 10px;
+    /* height: 30px; */
     display: flex;
     align-items: center;
     justify-content: center;
     color: var(--borderColor);
     background-color: white;
-    margin: 0px 30px;
+    margin-left: 30px;
+    margin-right: 0px;
+    border-radius: 30px;
+    border: 1px solid var(--borderColor);
+}
+
+.skillSetButtonActive {
+    padding: 0px 10px;
+    /* height: 30px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #EDE9FE;
+    color: var(--loadingIconColor);
+    margin-left: 30px;
+    margin-right: 0px;
+    border-radius: 30px;
+    border: none;
+    outline: none;
+}
+
+.skillSetButtonActive[title] {
+    padding: 0px 10px;
+    /* height: 30px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--borderColor);
+    background-color: white;
+    margin-left: 30px;
+    margin-right: 0px;
     border-radius: 30px;
     border: 1px solid var(--borderColor);
     outline: none;
@@ -690,7 +721,8 @@
 .skillbtn h3 {
     font-size: 13px;
     font-weight: 600;
-    padding: 8px 0px;
+    padding: 5px 0px;
+    margin-left: 25px;
 }
 
 .skillList .deleteIcon {
@@ -758,9 +790,9 @@
     /* height: 42px; */
     border: 1px solid var(--borderColor);
     border-radius: 7px;
-    padding: 15px;
+    padding: 10px;
     font-size: 15px;
-    outline: none;
+    /* outline: none; */
 }
 
 .addLanguages select {
@@ -768,9 +800,9 @@
     /* height: 42px; */
     border: 1px solid var(--borderColor);
     border-radius: 7px;
-    padding: 15px;
+    padding: 10px;
     font-size: 15px;
-    outline: none;
+    /* outline: none; */
 }
 
 .addLanguagesButton {
