--- a/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
+++ b/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
@@ -249,6 +249,17 @@
 
 }
 
+.candidateInfo select {
+    width: 100%;
+    /* height: 42px; */
+    border: 1px solid var(--borderColor);
+    border-radius: 7px;
+    padding: 9px;
+    font-size: 15px;
+    /* outline: none; */
+
+}
+
 .candidateInfo p {
     width: 100%;
     height: 42px;
