--- a/src/Components/Candidate/CandidateDashBoard/WorkExperience/WorkExperience.css
+++ b/src/Components/Candidate/CandidateDashBoard/WorkExperience/WorkExperience.css
@@ -68,12 +68,14 @@
     border-bottom-Right-radius: 8px;
     padding: 30px;
 }
-.workTopskills h5{
+
+.workTopskills h5 {
     font-size: 15px;
     font-weight: 500;
     color: #d1d5db;
     margin: 3px 0px;
 }
+
 /* overlay */
 .workExperinceOverlay {
     width: 65%;
@@ -111,28 +113,31 @@
 }
 
 /*Work exp*/
-.workExperience1{
+.workExperience1 {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: flex-start;
-    justify-content:flex-start;
+    justify-content: flex-start;
     flex-direction: column;
 }
-.workExperience h3{
+
+.workExperience h3 {
     font-size: 14px;
     font-weight: 500;
     color: #A1A1AA;
     text-transform: uppercase;
 }
-.workExperience2{
+
+.workExperience2 {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
 }
-.workExperienceleft{
+
+.workExperienceleft {
     width: 100%;
     height: 100%;
     display: flex;
@@ -143,7 +148,8 @@
     margin-top: 10px;
 
 }
-.workExperienceright{
+
+.workExperienceright {
     width: 100%;
     height: 100%;
     display: flex;
@@ -154,74 +160,85 @@
     margin-top: 10px;
 }
 
-.workTopskills{
+.workTopskills {
     width: 100%;
     display: flex;
     flex-direction: column;
     margin: 10px 0px;
 }
-.workTopskills h4{
+
+.workTopskills h4 {
     font-size: 14px;
     font-weight: 500;
     color: #6B7280;
     margin-bottom: 10px;
 }
-.workTopskills .workbtns{
+
+.workTopskills .workbtns {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     margin: 15px 0px;
 }
-.workbtns button{
+
+.workbtns button {
     color: #8B5CF6;
     padding: 3px 10px;
     border-radius: 20px;
     margin-right: 15px;
     background-color: #EDE9FE;
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
-.workTopskills h2{
+
+.workTopskills h2 {
     font-size: 15px;
     font-weight: 500;
     margin: 8px 0px;
 }
-.worklanguages{
+
+.worklanguages {
     width: 100%;
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
 }
-.worklanguages h2[title]{
+
+.worklanguages h2[title] {
     margin: 0px;
 }
 
-.worklanguages p{
+.worklanguages p {
     color: #A1A1AA;
 }
-.workTopskills h2{
+
+.workTopskills h2 {
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
-.workTopskills h2 img{
+
+.workTopskills h2 img {
     margin-right: 10px;
 }
-.workExperinceOverlay{
+
+.workExperinceOverlay {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     height: 600px;
 }
-.workExperinceOverlay h6{
+
+.workExperinceOverlay h6 {
     width: 100%;
     text-transform: uppercase;
     font-size: 15px;
 }
-.workExperinceOverlayFlex{
+
+.workExperinceOverlayFlex {
     width: 99%;
     height: 100%;
     display: flex;
@@ -234,39 +251,45 @@
     margin-right: 0px;
 }
 
-.workExperinceOverlayLeft{
+.workExperinceOverlayLeft {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
 }
-.workExperinceOverlayRight{
+
+.workExperinceOverlayRight {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
 }
-.keySkills{
+
+.keySkills {
     width: 100%;
     margin: 10px 0px;
     display: flex;
     flex-direction: column;
 }
-.keyskills1{
+
+.keyskills1 {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 10px 0px;
 }
-.keyskills1 p{
+
+.keyskills1 p {
     color: #6B7280;
 }
-.keyskills1 h3{
-    color:black;
-    text-transform:capitalize;
+
+.keyskills1 h3 {
+    color: black;
+    text-transform: capitalize;
 }
-.keyskills2{
+
+.keyskills2 {
     width: 100%;
     height: 50px;
     border-radius: 10px;
@@ -275,8 +298,10 @@
     padding: 6px;
     justify-content: flex-start;
     border: 1px solid #e5e7eb;
+    margin-top: 15px;
 }
-.keyskills2 button{
+
+.keyskills2 button {
     padding: 3px 10px;
     display: flex;
     align-items: center;
@@ -286,35 +311,40 @@
     margin-right: 10px;
     color: #6B7280;
 }
-.keyskills2 button span{
+
+.keyskills2 button span {
     padding: 2px;
     border-radius: 100%;
-    background-color:#E5E7EB;
+    background-color: #E5E7EB;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-left: 10px;
 
 }
-.keyskills2 button span img{
+
+.keyskills2 button span img {
     width: 10px;
     border-radius: 100%;
     height: 10px;
 }
-.keyskills2 select{
+
+.keyskills2 select {
     width: 100%;
     height: 100%;
     border: none;
     outline: none;
 }
-.keyskills3 select{
+
+.keyskills3 select {
     width: 100%;
     height: 35px;
     border: none;
     outline: none;
     /* height: 100%; */
 }
-.keyskills3{
+
+.keyskills3 {
     width: 100%;
     height: auto;
     border-radius: 10px;
@@ -325,37 +355,44 @@
     justify-content: flex-start;
     border: 1px solid #e5e7eb;
 }
-.worklanguage{
+
+.worklanguage {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 20px;
     margin: 15px 0px;
 }
-.worklanguage h3{
+
+.worklanguage h3 {
     margin-bottom: 10px;
     color: black;
     text-transform: capitalize;
 }
-.keyskills2 input{
+
+.keyskills2 input {
     outline: none;
     border: none;
 }
-.workExperienceright1{
+
+.workExperienceright1 {
     display: flex;
     flex-direction: column;
 }
-.workExperienceright1 .keyskills2{
+
+.workExperienceright1 .keyskills2 {
     padding: 0px;
 }
-.workExperienceright1 .keyskills2 select{
+
+.workExperienceright1 .keyskills2 select {
     padding: 0px;
     border-radius: 10px;
 }
-.keyskills4{
+
+.keyskills4 {
     width: 100%;
     height: 50px;
     border-radius: 10px;
@@ -367,7 +404,8 @@
     margin: 0px 0px 20px 0px;
 
 }
-.workExperienceright1 .keyskills4 select{
+
+.workExperienceright1 .keyskills4 select {
     width: 100%;
     height: 100%;
     padding: 0px;
@@ -375,7 +413,8 @@
     border: none;
     outline: none;
 }
-.keyskills2 .keylink{
+
+.keyskills2 .keylink {
     height: 100%;
     display: flex;
     align-items: center;
@@ -384,14 +423,17 @@
     padding: 0px 10px;
     border-right: 1px solid #e5e7eb;
 }
-.keyskills2 .keylink1{
+
+.keyskills2 .keylink1 {
     padding: 0px 10px;
-    color: #e5e7eb;
+    /* color: #e5e7eb; */
 }
-.workExperinceOverlayFlex::-webkit-scrollbar{
-    width:5px;
+
+.workExperinceOverlayFlex::-webkit-scrollbar {
+    width: 5px;
 }
+
 .workExperinceOverlayFlex::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background-color: #d4d4d8;
-  }
+}
