--- a/src/Components/Reusable/ProfileCard/ProfileCard.css
+++ b/src/Components/Reusable/ProfileCard/ProfileCard.css
@@ -71,7 +71,9 @@
 
 .candidateDiscoverImage img {
     border-radius: 100%;
-    height: 40px;
+    height: 50px;
+    width: 50px;
+    object-fit: cover;
 }
 
 .candidateDiscoverName {
