--- a/src/Components/Reusable/SearchProfileCard/SearchProfileCard.css
+++ b/src/Components/Reusable/SearchProfileCard/SearchProfileCard.css
@@ -62,8 +62,11 @@
 
 .candidateImage img {
     border-radius: 100%;
-    height: 40px;
+    height: 50px;
+    width: 50px;
+    object-fit: cover;
 }
+
 
 .candidateCartName {
     display: flex;
