--- a/src/Components/Candidate/CandidateDashBoard/ProfessionalDetails/ProfessionalDetails.css
+++ b/src/Components/Candidate/CandidateDashBoard/ProfessionalDetails/ProfessionalDetails.css
@@ -104,15 +104,19 @@
 
 .professionalDetailsDesc h5 {
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 500;
     margin-bottom: 3px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .professionalDetailsDesc h6 {
     font-size: 14px;
     font-weight: 600;
     margin-bottom: 3px;
+}
+
+.professionalDetailsDescSkills {
+    font-weight: 500;
 }
 
 /* overLay */
