--- a/src/Components/AdminScreen/AdminProfile/AdminCandidateProfile/AdminCandidateProfile.css
+++ b/src/Components/AdminScreen/AdminProfile/AdminCandidateProfile/AdminCandidateProfile.css
@@ -118,10 +118,10 @@
     background-color: #FEF9C3;
 }
 
-.hiring {
+/* .hiring {
     color: #15803D;
     background-color: #DCFCE7;
-}
+} */
 
 .contracted {
     color: #3B82F6;
