state managed for notification

--- a/src/Components/AdminScreen/AdminHome/AdminHome.css
+++ b/src/Components/AdminScreen/AdminHome/AdminHome.css
@@ -36,6 +36,11 @@
     border-bottom: 2px solid var(--primaryColor);
 }
 
+.adminNotificationTabInactive {
+    padding: 10px;
+    border-bottom: 2px solid transparent;
+}
+
 .adminNotificationLog {
     width: 100%;
     height: 280px;
