admin edit pages done

--- a/src/Components/AdminScreen/AdminProfile/ACandidateProfileView/ACandidateProfileView.css
+++ b/src/Components/AdminScreen/AdminProfile/ACandidateProfileView/ACandidateProfileView.css
@@ -131,3 +131,68 @@
 
 }
 
+
+/* admin edit overlay */
+.adminEditOverlay {
+    width: 60%;
+    background-color: white;
+    display: flex;
+    z-index: 10 !important;
+    flex-direction: column;
+    /* padding: 10px; */
+    border-radius: 12px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.adminEditOverlayHead {
+    padding: 20px;
+    font-size: 16px;
+    font-weight: 600;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    background-color: var(--dropColor);
+    border-bottom: 1px solid var(--borderColor);
+}
+
+.adminEditOverlayBody {
+    padding: 0px 20px 20px 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 25px;
+}
+
+.adminEditOverlayBody h2 {
+    font-size: 14px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    margin-top: 15px;
+}
+
+.adminEditOverlayBody input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 8px;
+    border: 1px solid var(--borderColor);
+}
+
+.editOverlayButton {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0px 20px 20px 20px;
+
+}
+
+.adminEditAddMore {
+    width: 95.5%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    border-radius: 8px;
+    border: 1px solid var(--borderColor);
+    margin-top: 5px;
+    margin-bottom: 25px;
+}
