update admin Profile

--- a/src/Components/AdminScreen/AdminProfile/ACandidateProfileView/ACandidateProfileView.css
+++ b/src/Components/AdminScreen/AdminProfile/ACandidateProfileView/ACandidateProfileView.css
@@ -177,6 +177,12 @@
     border-radius: 8px;
     border: 1px solid var(--borderColor);
 }
+.adminEditOverlayBody select {
+    width: 100%;
+    padding: 10px;
+    border-radius: 8px;
+    border: 1px solid var(--borderColor);
+}
 
 .editOverlayButton {
     display: flex;
