--- a/src/Components/AdminScreen/AdminProfile/ACandidateProfileView/ACandidateProfileView.css
+++ b/src/Components/AdminScreen/AdminProfile/ACandidateProfileView/ACandidateProfileView.css
@@ -148,7 +148,7 @@
 }
 
 .adminEditOverlayHead {
-    padding: 20px;
+    padding: 15px 20px;
     font-size: 16px;
     font-weight: 600;
     border-top-left-radius: 8px;
@@ -177,6 +177,7 @@
     border-radius: 8px;
     border: 1px solid var(--borderColor);
 }
+
 .adminEditOverlayBody select {
     width: 100%;
     padding: 10px;
@@ -201,4 +202,64 @@
     border: 1px solid var(--borderColor);
     margin-top: 5px;
     margin-bottom: 25px;
+}
+
+/* upload  */
+.adminEditOverlayContent h3 {
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+.adminEditOverlayUpload {
+    width: 100%;
+    padding: 20px;
+    border-radius: 8px;
+    border: 1px dotted var(--borderColor);
+}
+
+.adminEditOverlayUploadHead {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.adminEditOverlayUploadHead img {
+    height: 32px;
+    padding: 5px;
+    background-color: var(--white);
+    border: 1px solid var(--borderColor);
+    border-radius: 5px;
+    margin-right: 15px;
+}
+
+.adminEditOverlayUploadHead h4 {
+    font-size: 14px;
+    font-weight: 500;
+    opacity: 0.6;
+}
+
+.adminEditOverlayUploadHead h5 {
+    font-size: 12px;
+    font-weight: 600;
+    opacity: 0.6;
+}
+
+.adminEditOverlayUpload p {
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--textColor);
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.adminEditOverlayUpload button {
+    width: 100%;
+    font-size: 14px;
+    font-weight: 600;
+    padding: 6px;
+    border-radius: 8px;
+    border: 1px solid var(--borderColor);
+    background-color: var(--white);
 }
