--- a/src/Components/AdminScreen/AdminProfile/ACandidateProfileView/ACandidateProfileView.css
+++ b/src/Components/AdminScreen/AdminProfile/ACandidateProfileView/ACandidateProfileView.css
@@ -217,6 +217,7 @@
     padding: 20px;
     border-radius: 8px;
     border: 1px dotted var(--borderColor);
+    cursor: pointer;
 }
 
 .adminEditOverlayUploadHead {
