--- a/src/Components/Reusable/SideBar/SideBar.css
+++ b/src/Components/Reusable/SideBar/SideBar.css
@@ -134,8 +134,8 @@
     font-weight: 500;
 }
 
-.menuImg {
-    height: 22px;
+.menuIcon {
+    font-size: 18px;
     object-fit: cover;
     margin-right: 10px;
 }
@@ -148,7 +148,7 @@
     color: var(--primaryColor);
 }
 
-.menu1:hover .menuImg {
+.menu1:hover .menuIcon {
     color: var(--primaryColor);
 }
 
