--- a/src/Components/Candidate/CandidateDashBoard/CandidateProfile/CandidateProfile.css
+++ b/src/Components/Candidate/CandidateDashBoard/CandidateProfile/CandidateProfile.css
@@ -28,7 +28,7 @@
 }
 
 .candidateProgressBarBackgound {
-    width: 50%;
+    /* width: 50%; */
     height: 10px;
     border-radius: 8px;
     background-color: var(--primaryColor);
