--- a/src/Components/Reusable/CandidateProfileCard/CandidateProfileCard.css
+++ b/src/Components/Reusable/CandidateProfileCard/CandidateProfileCard.css
@@ -74,6 +74,30 @@
     position: relative;
 }
 
+.progress-container {
+    width: 100%;
+    overflow: hidden;
+    margin: 20px auto;
+}
+
+progress {
+    width: 100%;
+    height: 12px;
+    background-color: var(--primaryColor);
+    border-radius: 20px;
+    appearance: none;
+}
+
+progress::-webkit-progress-bar {
+    background-color: #f0f0f0;
+    border-radius: 20px;
+}
+
+progress::-webkit-progress-value {
+    background-color: var(--primaryColor);
+    border-radius: 20px;
+}
+
 .profileLeftTop img {
     height: 120px;
     width: 120px;
