--- a/src/Components/Reusable/SideBar/SideBar.css
+++ b/src/Components/Reusable/SideBar/SideBar.css
@@ -63,6 +63,13 @@
     color: var(--textColor);
 }
 
+.profilePic img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
 .cash {
     display: flex;
     border-radius: 8px;
