--- a/src/Components/AdminScreen/AdminHome/AdminHome.css
+++ b/src/Components/AdminScreen/AdminHome/AdminHome.css
@@ -57,18 +57,98 @@
 
 .homeProgressCandidate {
     width: 100%;
-    height: 220px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
     border-radius: 8px;
+    padding: 15px 25px;
     border: 1px solid var(--borderColor);
     background-color: var(--white);
 }
 
 .homeProgressClient {
     width: 100%;
-    height: 220px;
     border-radius: 8px;
+    padding: 15px 25px;
     border: 1px solid var(--borderColor);
     background-color: var(--white);
+}
+
+.homeProgressClient h1 {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+.homeProgressClientFlex {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-bottom: 15px;
+    border-bottom: 1px solid var(--borderColor);
+}
+
+.homeProgressClientFlexContent {
+    margin-right: 25px;
+}
+
+.progressHike {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    color: #22C55E;
+}
+
+.progressDecrement h3,
+.progressHike h3 {
+    font-size: 12px;
+    font-weight: 500;
+    margin-left: 5px;
+}
+
+.progressDecrement {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    color: #F87171;
+}
+
+.homeProgressClientFlexContent h4 {
+    font-size: 30px;
+    font-weight: 500;
+}
+
+
+.homeProgressClientFlexContent h2 {
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--textColor);
+}
+
+.homeProgressClientSubscribe {
+    margin-top: 15px;
+}
+
+.homeProgressClientSubscribeFlex {
+    display: flex;
+
+}
+
+.homeProgressClientSubscribe h2 {
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--textColor);
+}
+
+.homeProgressClientFlexContent h5 {
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.homeProgressClientFlexContent h6 {
+    font-size: 14px;
+    color: var(--textColor);
 }
 
 /* overlay */
@@ -120,11 +200,17 @@
     margin-bottom: 5px;
 }
 
-.homeProgressCandidate {
+
+.homeProgressCandidate h1 {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+.homeProgressCandidateFlex {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    padding: 25px;
 }
 
 .homeProgressCandidateLeft {
