--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ code {
   --borderColor: #dbdbdb;
   --dropBorderColor: #E2E8F0;
   --dropColor: #F8FAFC;
+  --approveColor: #EDE9FE;
 }
 
 .sectionWidth {
