--- a/src/Components/AdminScreen/AdminProfile/AClientProfileview/AClientProfileView.css
+++ b/src/Components/AdminScreen/AdminProfile/AClientProfileview/AClientProfileView.css
@@ -40,10 +40,25 @@
     margin-left: 20px;
 }
 
+.clientProfileViewFlexLeftDescHead {
+    display: flex;
+    align-items: center;
+}
+
+.pendingApproval {
+    font-size: 12px;
+    font-weight: 400;
+    padding: 5px 10px;
+    border-radius: 20px;
+    color: #A16207;
+    background-color: #FEF9C3;
+}
+
 .clientProfileViewFlexLeftDesc h1 {
     font-size: 25px;
     font-weight: 600;
     text-transform: capitalize;
+    margin-right: 15px;
 }
 
 .clientProfileViewFlexLeftDesc h2 {
@@ -72,18 +87,18 @@
 }
 
 .clientProfileViewFlexRight {
-    /* width: 40%; */
     display: flex;
     align-items: flex-start;
+    position: relative;
 }
 
 .disableProfile {
-    font-size: 14px;
+    font-size: 19px;
     background-color: var(--white);
-    padding: 6px 15px;
+    padding: 8px 10px;
     border: 1px solid var(--borderColor);
     border-radius: 8px;
-    margin-right: 10px;
+    margin-left: 10px;
 }
 
 .editRate {
@@ -99,6 +114,44 @@
 
 .editRate img {
     margin-right: 10px;
+}
+
+.approvalMenu {
+    padding: 10px;
+    z-index: 10 !important;
+    position: absolute;
+    background-color: var(--white);
+    border: 1px solid var(--borderColor);
+    border-radius: 8px;
+    top: 120%;
+    right: 0%;
+
+}
+
+.approvalMenuActive {
+    font-size: 14px;
+    font-weight: 500;
+    padding: 5px 10px;
+    border-radius: 8px;
+    margin-bottom: 5px;
+}
+
+.approvalMenuActive:hover {
+    color: var(--primaryColor);
+    background-color: var(--approveColor);
+}
+
+.approvalMenuDisable {
+    font-size: 14px;
+    font-weight: 500;
+    padding: 5px 10px;
+    margin-top: 5px;
+    border-radius: 8px;
+}
+
+.approvalMenuDisable:hover {
+    color: #EF4444;
+    background-color: #FEE2E2;
 }
 
 /* tab */
