--- a/src/Components/AdminScreen/AdminProfile/AClientProfileview/AClientProfileView.css
+++ b/src/Components/AdminScreen/AdminProfile/AClientProfileview/AClientProfileView.css
@@ -134,6 +134,7 @@
     padding: 5px 10px;
     border-radius: 8px;
     margin-bottom: 5px;
+    cursor: pointer;
 }
 
 .approvalMenuActive:hover {
@@ -147,6 +148,7 @@
     padding: 5px 10px;
     margin-top: 5px;
     border-radius: 8px;
+    cursor: pointer;
 }
 
 .approvalMenuDisable:hover {
