--- a/src/Components/Reusable/CandidateProfileCard/CandidateProfileCard.css
+++ b/src/Components/Reusable/CandidateProfileCard/CandidateProfileCard.css
@@ -837,7 +837,7 @@ progress::-webkit-progress-value {
 /* available */
 .available {
     width: 100%;
-    padding: 0px 40px;
+    /* padding: 0px 40px; */
 }
 
 .availableFlex {
