--- a/src/Components/Candidate/CandidateDashBoard/Education/Education.css
+++ b/src/Components/Candidate/CandidateDashBoard/Education/Education.css
@@ -324,6 +324,8 @@
     padding: 10px 12px;
     border-radius: 6px;
     border: 1px solid var(--borderColor);
+    align-items: center;
+    cursor: pointer;
 }
 
 .gradeCertificate img {
