--- a/src/Components/AdminScreen/AdminProfile/AdminCandidateProfile/AdminCandidateProfile.css
+++ b/src/Components/AdminScreen/AdminProfile/AdminCandidateProfile/AdminCandidateProfile.css
@@ -20,16 +20,16 @@
     margin-top: 5px;
     border: 1px solid var(--borderColor); */
 
-    width: 50%;
+    width: 100%;
     padding: 10px;
     border-radius: 8px;
     margin-top: 5px;
     border: 1px solid var(--borderColor);
-    margin-left: 234px;
+    /* margin-left: 234px; */
 }
 
 .selectdiv {
-    width: 40%;
+    /* width: 40%; */
     gap: 2rem;
     display: flex;
 }
