--- a/src/Components/AdminScreen/AdminProfile/AClientProfileview/AClientProfileView.css
+++ b/src/Components/AdminScreen/AdminProfile/AClientProfileview/AClientProfileView.css
@@ -100,6 +100,15 @@
     border-radius: 8px;
     margin-left: 10px;
 }
+.disable_Profile{
+    font-size: 19px;
+    background-color:lightgray;
+    padding: 8px 10px;
+    border: 1px solid var(--borderColor);
+    border-radius: 8px;
+    margin-left: 10px;
+    cursor: auto;
+}
 
 .editRate {
     font-size: 14px;
