--- a/src/Components/Reusable/ContractCard/ContractCard.css
+++ b/src/Components/Reusable/ContractCard/ContractCard.css
@@ -46,8 +46,9 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 15px;
 }
-.contractCard button[title]{
-    background-color: lightgray;
+
+.contractCard button[title] {
+    background-color: white;
     border: 1px solid var(--borderColor);
     border-radius: 8px;
     color: black;
